--- a/nodejs-server/package.json
+++ b/nodejs-server/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "expresstires",
+  "name": "leutires",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npx nodemon server.js"
+    "start": "npx nodemon"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "~4.16.1",
-    "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.11.15",
     "nodemailer": "^6.4.18",
