--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,10 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "compression": "^1.7.4",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
-    "mongoose": "^5.11.15",
+    "mongoose": "^5.11.14",
     "nodemailer": "^6.4.18",
     "validator": "^13.5.2"
   }
