--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.23",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
-  "proxy":"http://localhost:2323",
+  "proxy": "http://localhost:2323",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
